1.Added assets folder with 2 svg files (may be taken out later) 2.Changed color parameter to something more visible for now 3. made the cursor css property of the quicklinks panel 'pointer' 4. Changed the display value of the button css so that it defaults to visible 5. Added svg as strings in an array of the quicklinks object to avoid cross origin loading issues 6. panel now opens and closes when button is pushed

--- a/scss/quicklinks.scss
+++ b/scss/quicklinks.scss
@@ -5,7 +5,7 @@ $large-screen:  960px;
 
 
 .quicklinks {
-  // cursor: pointer;
+  cursor: pointer;
   // min-width: 180px;
   // max-width: 215px;
   // float: right;
@@ -93,7 +93,6 @@ $large-screen:  960px;
     bottom: 30px;
     right: 30px;
     opacity: .95;
-    display: none;
 
     @media screen and (max-width: $medium-screen) {
       bottom: 15px;
